--- a/Practica 2 8TI.html
+++ b/Practica 2 8TI.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-<table border="1"
+<div id="tabla" >
+
+<table border="1">
 
 <tr>
 
@@ -28,5 +30,26 @@
 
 </table>
 
+</div>
+
 </body>
 </html>
+
+
+<style>
+
+
+#tabla{
+
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 100px;
+    text-align: center;
+    background-color: #f3f3f3;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+
+</style>
